# c_exer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
src/: ball.cpp  ball.h  main.cpp  pawn.cpp  pawn.h  player.cpp  player.h  spawner.cpp  spawner.h
